# adsp.playground

./: CMakeLists.txt  README.md
adsp.playground/: addon.xml
adsp.playground/resources/language/English/: strings.po
adsp.playground/resources/skins/skin.estuary/1080i/: DialogCompressorMode.xml  DialogGainMode.xml
src/: CompressorModeEnvironment.cpp  CompressorModeEnvironment.hpp  EnumStrIDs.hpp  GainModeEnvironment.cpp  GainModeEnvironment.hpp  InputResampleCpy.cpp  InputResampleCpy.hpp  InputResampleCpyModeSettings.cpp  InputResampleCpyModeSettings.hpp  PostProcessCpy.cpp  PostProcessCpy.hpp  PostProcessCpyModeSettings.cpp  PostProcessCpyModeSettings.hpp  PreProcessCpy.cpp  PreProcessCpy.hpp  PreProcessCpyModeSettings.cpp  PreProcessCpyModeSettings.hpp
src/CompressorMode/: CompressorMode.cpp  CompressorMode.hpp  CompressorModeController.cpp  CompressorModeController.hpp  CompressorModeControllerMessages.cpp  CompressorModeControllerMessages.hpp  CompressorModeDefaults.h  CompressorModeDialog.cpp  CompressorModeDialog.hpp  CompressorModeDialogMessages.cpp  CompressorModeDialogMessages.hpp  CompressorModeDialogSettings.cpp  CompressorModeDialogSettings.hpp  CompressorModeMessages.cpp  CompressorModeMessages.hpp  CompressorModeModel.cpp  CompressorModeModel.hpp  CompressorModeModelMessages.cpp  CompressorModeModelMessages.hpp  CompressorModeSettings.cpp  CompressorModeSettings.hpp
src/Dialogs/: GUIDialogMasterProcess.h  GUIDialogOutputResample.h  GUIDialogPostProcess.h  GUIDialogPreProcess.h
src/GainMode/: GainMode.cpp  GainMode.hpp  GainModeController.cpp  GainModeController.hpp  GainModeControllerMessages.cpp  GainModeControllerMessages.hpp  GainModeDefaults.h  GainModeDialog.cpp  GainModeDialog.hpp  GainModeDialogMessages.cpp  GainModeDialogMessages.hpp  GainModeDialogSettings.hpp  GainModeMessages.cpp  GainModeMessages.hpp  GainModeModel.cpp  GainModeModel.hpp  GainModeModelMessages.cpp  GainModeModelMessages.hpp  GainModeSettings.cpp  GainModeSettings.hpp
src/adsp.template/: ADSPHelpers.cpp  ADSPHelpers.h  CMakeLists.txt  client.cpp
src/adsp.template/Addon/MVC/Interfaces/: MVCObject.hpp
src/adsp.template/Addon/MVC/Interfaces/Model/: IModel.hpp  IParameter.hpp
src/adsp.template/Addon/MVC/Interfaces/View/: IKodiGUIView.hpp  IView.hpp
src/adsp.template/Addon/MVC/Model/: TParameter.hpp
src/adsp.template/Addon/MessageSystem/Communication/: ActorProtocol.cpp  MessageDispatcher.cpp  MessageDispatcher.hpp
src/adsp.template/Addon/MessageSystem/Sockets/: TSocketClassMethodCallback.hpp
src/adsp.template/Addon/Process/: AddonProcessManager.cpp  AddonProcessManager.hpp  IAddonProcess.hpp
src/adsp.template/AudioDSP/FactoryADSPModes/: FactoryADSPModes.cpp  FactoryADSPModes.hpp  IADSPMode.hpp
src/adsp.template/AudioDSP/Streams/: ADSPStreamBuilderAll.cpp  ADSPStreamManager.cpp
src/adsp.template/include/: client.h
src/adsp.template/utils/: TTypeIDs.cpp  TTypeIDs.hpp
